# Genkidama

./: .gitignore  README.md  client_test.py  pyproject.toml  todos.md
.github/workflows/: python-publish.yml
src/genkidama/: __init__.py  __main__.py  config.py  facade.py
src/genkidama/coms/: __init__.py  codec.py  endpoint.py  requests.py  server.py  transport.py
src/genkidama/core/: __init__.py  donor_session.py  genkidama_session.py  process.py
src/genkidama/utils/: __init__.py  io_streams.py
src/genkidama/workers/: __init__.py  warden.py  workers.py
tests/: test.py  testscript.py
